Name: stringprep
Version: 1.0.0
Description: Implements the "StringPrep" algorithm
Synopsis: Implements the "StringPrep" algorithm
License: BSD3
Author: George Pollard <porges@porg.es>
Maintainer: George Pollard <porges@porg.es>
Build-Type: Simple
Cabal-Version: >=1.10
License-file: LICENSE
Category: data
extra-source-files: Text/*.hs

source-repository head
    type: git
    location: https://github.com/Porges/stringprep-hs.git

source-repository this
    type: git
    location: https://github.com/Porges/stringprep-hs.git
    tag: v1.0.0

Library
 Build-Depends: base          >=3 && < 5
              , containers    >=0.2
              , text          >=0.9
 if impl(ghcjs)
    Build-Depends: ghcjs-base
 else
    Build-Depends: text-icu   >=0.6
 Exposed-modules: Text.StringPrep
                , Text.StringPrep.Profiles
                , Text.CharRanges
 ghc-options: -O2 -Wall -fno-warn-name-shadowing
 default-language: Haskell2010
 ghcjs-options: -D__GHCJS

test-suite tests
 Build-Depends: base
              , QuickCheck
              , containers
              , text
              , tasty
              , tasty-quickcheck
              , tasty-th
              , tasty-hunit
 if impl(ghcjs)
    Build-Depends: ghcjs-base
 else
    Build-Depends: text-icu
 type:         exitcode-stdio-1.0
 main-is:     Tests.hs
 Other-modules: Ranges
 hs-source-dirs: tests .
 default-language: Haskell2010
 ghcjs-options: -D__GHCJS
